# modal-deployment

./: .gitignore  README.md  main.py  modal_deployer.py  pyproject.toml  run.py  zenml_e2e_modal_deployment.py
app/: Dockerfile  __init__.py  deployment_template.py  main.py  requirements.txt  schemas.py
scripts/: format.sh  shutdown.sh
src/: constants.py
src/configs/: common.yaml  deploy_production.yaml  deploy_staging.yaml  production.yaml  staging.yaml  train_production.yaml  train_staging.yaml
src/pipelines/: __init__.py  deploy.py  train_model.py
src/schemas/: __init__.py  iris_model.py  iris_prediction.py
src/steps/: __init__.py  deployment.py  load_volume_metadata.py  save_to_modal_volume.py  training.py
src/templates/: deployment_template.py  pytorch_deployment_template.py  sklearn_deployment_template.py
src/utils/: __init__.py  constants.py  model_utils.py  yaml_config.py
templates/: pytorch_deployment_template.py  sklearn_deployment_template.py
