[project]
name = "modal-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.73.157",
    "zenml>=0.80.2",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "yamlfix>=1.17.0",
]
